--- a/area-chart/index.html
+++ b/area-chart/index.html
@@ -35,7 +35,7 @@
         </linearGradient>
     </defs>
   </svg>
-  <script src="http://d3js.org/d3.v4.min.js"></script>
+  <script src="https://d3js.org/d3.v4.min.js"></script>
   <script src="./area.js"></script>
 </body>
 </html>
